# sensor-emulator

./: .gitignore  CMakeLists.txt  README.md  SUBMISION.txt  conanfile.py
conf/: ca-certificates.crt
sensor/: Application.cpp  Application.h  HTTPClient.cpp  HTTPClient.h  Messages.h  Sampler.cpp  Sampler.h  Sender.cpp  Sender.h  WSClient.cpp  WSClient.h  errors.h
server/: .cfignore  manifest.yml  requirements.txt  server.py
server/templates/: report.html
setup/: predix_setup.py  requirements.txt
